[gd_scene load_steps=8 format=3 uid="uid://ffdvslxl0j4f"]

[ext_resource type="Script" path="res://scenes/animal/animal.gd" id="1_fp6qf"]
[ext_resource type="Texture2D" uid="uid://btwrrr0aciin2" path="res://icon.svg" id="1_mkr62"]
[ext_resource type="Texture2D" uid="uid://ckkdinrx5c184" path="res://assets/items/arrow.png" id="3_07576"]
[ext_resource type="AudioStream" uid="uid://2vey1574nw1m" path="res://assets/audio/stretch2.ogg" id="4_ja6su"]
[ext_resource type="AudioStream" uid="uid://cy8pbhllmqvmw" path="res://assets/audio/catapult.ogg" id="5_8cxax"]
[ext_resource type="AudioStream" uid="uid://3340vnmmi5o" path="res://assets/audio/kick_wood.ogg" id="6_um83k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c4v8h"]

[node name="Animal" type="RigidBody2D"]
input_pickable = true
freeze = true
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_fp6qf")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.46, 0.46)
texture = ExtResource("1_mkr62")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_c4v8h")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(1.24, 1.2)

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -29.0
offset_top = -54.0
offset_right = 26.0
offset_bottom = -31.0
scale = Vector2(1.04, 0.996734)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "DEBUG"

[node name="Arrow" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_07576")
offset = Vector2(180, 0)

[node name="StretchSound" type="AudioStreamPlayer2D" parent="."]
scale = Vector2(0.3, 0.3)
stream = ExtResource("4_ja6su")

[node name="LaunchSound" type="AudioStreamPlayer2D" parent="."]
scale = Vector2(0.3, 0.3)
stream = ExtResource("5_8cxax")

[node name="KickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_um83k")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="sleeping_state_changed" from="." to="." method="_on_sleeping_state_changed"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
